night commit