@@ -1,8 +1,11 @@
 package alphamode.core.nebula.dimensions;
 
+import alexiil.mc.lib.attributes.fluid.amount.FluidAmount;
+import alexiil.mc.lib.attributes.fluid.volume.FluidVolume;
 import alphamode.core.nebula.NebulaRegistry;
 import alphamode.core.nebula.gases.Gas;
 import alphamode.core.nebula.gases.NebulaGases;
+import com.google.common.collect.ImmutableMap;
 
 import net.minecraft.util.registry.Registry;
 import net.minecraft.world.dimension.DimensionType;
@@ -23,9 +26,9 @@ public class NebulaDimensions {
     }
 
     static {
-        SPACE = Registry.register(NebulaRegistry.ATMOSPHERE, id("space"), new Atmosphere(id("space"), Map.of(NebulaGases.EMPTY,0)));
-        OUTTER_SPACE = Registry.register(NebulaRegistry.ATMOSPHERE, id("outter_space"), new Atmosphere(id("outter_space"), Map.of(NebulaGases.NITROGEN,52)));
-        EARTH_ATMOSPHERE = Registry.register(NebulaRegistry.ATMOSPHERE, id("earth"),new Atmosphere(DimensionType.OVERWORLD_ID, Map.of(NebulaGases.OXYGEN,27,NebulaGases.NITROGEN,11)));
+        SPACE = Registry.register(NebulaRegistry.ATMOSPHERE, id("space"), new Atmosphere(id("space"), ImmutableMap.of(NebulaGases.EMPTY,0)));
+        OUTTER_SPACE = Registry.register(NebulaRegistry.ATMOSPHERE, id("outter_space"), new Atmosphere(id("outter_space"), ImmutableMap.of(NebulaGases.NITROGEN, 100)));
+        EARTH_ATMOSPHERE = Registry.register(NebulaRegistry.ATMOSPHERE, id("earth"),new Atmosphere(DimensionType.OVERWORLD_ID, ImmutableMap.of(NebulaGases.OXYGEN,27,NebulaGases.NITROGEN,11)));
     }
 
 }
